Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97792

Mixing OpenGL and Quick Controls lead to drawing errors in TextField

    XMLWordPrintable

Details

    • All
    • 8d4a3cc537e13551b60c66c2127277444ac74441 (qt/tqtc-qtdeclarative/5.15)

    Description

      Steps to reproduce:
      1.) Open the attached example and run it.
      2.) In the top left corner there is a popup element with a TextField in it but the text field is not correctly drawn (i.e. the line indicator is missing).
      3.) Replace the SquircleRenderer::paint() with

      void SquircleRenderer::paint()
      {
        return;
      }
      

      Now the TextField is correctly drawn.

      I have tested this on Windows and Android.

      The problem does not occur in Qt 6.2.1. It seems as if one of the shaders used for drawing the TextField is not properly set (i.e. missing when the OpenGL state is reset) in Qt 5.15.*.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            DanielSt Peter Staab
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes