Set OpenGL state after invoking custom rendering

Fixes: QTBUG-97792
Change-Id: I7581d931c9665993426f91f9181e37fb5991bceb
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>