src/quick/scenegraph/coreapi/qsgbatchrenderer.cpp
@@ -4009,6 +4009,16 @@ void Renderer::renderBatches()
 
         if (m_useDepthBuffer) {
             glClearDepthf(1); // calls glClearDepth() under the hood for desktop OpenGL
+        }
+        glColorMask(true, true, true, true);
+        glDisable(GL_SCISSOR_TEST);
+
+        bindable()->clear(clearMode());
+
+        if (m_renderPassRecordingCallbacks.start)
+            m_renderPassRecordingCallbacks.start(m_renderPassRecordingCallbacks.userData);
+
+        if (m_useDepthBuffer) {
             glEnable(GL_DEPTH_TEST);
             glDepthFunc(GL_LESS);
             glDepthMask(true);
@@ -4021,11 +4031,6 @@ void Renderer::renderBatches()
         glColorMask(true, true, true, true);
         glDisable(GL_SCISSOR_TEST);
         glDisable(GL_STENCIL_TEST);
-
-        bindable()->clear(clearMode());
-
-        if (m_renderPassRecordingCallbacks.start)
-            m_renderPassRecordingCallbacks.start(m_renderPassRecordingCallbacks.userData);
 
         if (Q_LIKELY(renderOpaque)) {
             for (int i=0; i<m_opaqueBatches.size(); ++i) {
